stderr
JudgeMan.java:79: error: incomparable types: Integer and String
                        if(isPaired.get(m) == number){
                                           ^
1 error
